<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bullb.ctf.Setting.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/change_pw_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:text="@string/change_password"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white_transparent_80"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/language_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:text="@string/language"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white_transparent_80"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:text="@string/logout"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white_transparent_80"/>

        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
