<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/circle_frame">

    <com.bullb.ctf.Widget.CircleView
        android:id="@+id/circle_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@id/circle_view">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_weight="1">


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical">
            <LinearLayout
                android:id="@+id/original_breakdown_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/original_target_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:maxWidth="100dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/sales_target"
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/original_target_a"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:maxWidth="100dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/a_type"
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/original_target_e"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:maxWidth="100dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/e_type"
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/original_target_f"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:maxWidth="100dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/f_type"
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:gravity="center"/>
            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/right"
            android:visibility="invisible"/>

    </LinearLayout>

</RelativeLayout>
