<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bullb.ctf.Setting.ChangePasswordFragment">

    <LinearLayout
        android:id="@+id/change_pw_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/change_pw_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground">

            <EditText
                android:id="@+id/pw_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:hint="@string/current_pw"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:typeface="normal"
                android:textCursorDrawable="@null"
                android:background="@color/white_transparent_80"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/language_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground">


            <EditText
                android:id="@+id/new_pw_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:hint="@string/new_pw"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:typeface="normal"
                android:textCursorDrawable="@null"
                android:background="@color/white_transparent_80"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground">


            <EditText
                android:id="@+id/confirm_pw_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:hint="@string/confirm_pw"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:typeface="normal"
                android:textCursorDrawable="@null"
                android:background="@color/white_transparent_80"/>

        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
