<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bullb.ctf.Login.TermsActivity"
    tools:showIn="@layout/activity_terms">

    <Button
        android:id="@+id/agreeBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_selectable_bg"
        android:padding="4dp"
        android:text="@string/agree"
        android:textSize="20sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/disagreeBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_selectable_bg"
        android:padding="4dp"
        android:text="@string/disagree"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/round_selectable_bg"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/agreeBtn"
        app:layout_constraintRight_toRightOf="@+id/disagreeBtn"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/agreeBtn">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/title_terms"
            android:textColor="@color/text_brown"
            android:textStyle="bold"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/termsTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:textColor="@color/text_brown"
            android:scrollbars="vertical"
            android:lineSpacingExtra="8dp"
            android:textSize="14sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
