<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bullb.ctf.Login.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:fitsSystemWindows="true">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:layout_centerInParent="true"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:gravity="center_horizontal">



            <!--<EditText-->
                <!--android:id="@+id/user_id_edit_text"-->
                <!--android:layout_width="240dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/user_id"-->
                <!--android:textColorLink="@color/white"-->
                <!--android:nextFocusDown="@+id/password_edit_text"-->
                <!--android:imeOptions="actionNext"-->
                <!--android:inputType="text"-->
                <!--android:maxLines="1"-->
                <!--android:textColor="@color/white"-->
                <!--android:theme="@style/TextLabel"/>-->




            <android.support.design.widget.TextInputLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_id_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_id"
                    android:textColorLink="@color/white"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:nextFocusDown="@+id/password_edit_text"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textAppearance="@style/TextLabel"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="@color/white"
                    android:textColorLink="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword"
                    android:textAppearance="@style/TextLabel"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <!--<EditText-->
                <!--android:id="@+id/password_edit_text"-->
                <!--android:layout_width="240dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:hint="@string/password"-->
                <!--android:textColorLink="@color/white"-->
                <!--android:nextFocusDown="@+id/password_edit_text"-->
                <!--android:textColor="@color/white"-->
                <!--android:imeOptions="actionDone"-->
                <!--android:inputType="textPassword"-->
                <!--android:maxLines="1"-->
                <!--android:theme="@style/TextLabel"/>-->



            <TextView
                android:id="@+id/error_msg"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:maxLines="2"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:text="@string/login"
                android:textColor="@color/main_red"
                android:background="@drawable/login_btn_bg"/>


            <RelativeLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/forgot_pw_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@drawable/white_text_click_effect"
                    android:layout_alignParentRight="true"
                    android:textSize="12sp"/>

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:orientation="horizontal"
                android:layout_gravity="right"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_c"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/language_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:textColor="@drawable/white_text_click_effect"
                    android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
